<resources>
    <string name="app_name">RIT Attendance Manager</string>
    <string name="loginText">LOGIN</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login_ButtonText">Login</string>
    <string name="new_user_sign_up">New user? Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="enter_staff_id">Enter Staff Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_staff_name">Enter Staff Name</string>
    <string name="department">Department</string>
    <string name="enter_college_mail_id">Enter college mail Id</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="create_password">Create Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attendance">Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="profile">Profile</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="batch_dept_sect">BATCH-DEPT-SECT</string>
    <string name="sem_x">SEM : X</string>
    <string name="hour">HOUR</string>
    <string name="date">DATE</string>
    <string name="day">DAY</string>
    <string name="save_attendance">SAVE ATTENDANCE</string>
    <string name="confirm_attendance">Confirm Attendance</string>
    <string name="subject">SUBJECT</string>
    <string name="export_data">EXPORT DATA</string>
    <string name="textview">TextView</string>
    <string name="present">P</string>
    <string name="absent">A</string>
    <string name="onduty">OD</string>
    <string name="select_batch">Select Batch</string>
    <string name="select_department">Select Department</string>
    <string name="select_section">Select Section</string>
    <string name="semester">Semester</string>
    <string name="select_hour">Select Hour</string>
    <string name="select_subject">Subject : </string>
    <string name="choose_the_subject">Choose the subject at top</string>
    <string name="rit_logo">RIT LOGO</string>
</resources>