<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF3700B3"
    tools:context=".MarkAttendanceFragment">

    <TableLayout
        android:id="@+id/details_TableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="10dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/batch_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/batch_dept_sect"
                android:textColor="#FFEB3B"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="end"
                android:text="@string/date"
                android:textColor="#FFEB3B"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/deptSect_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/batch_dept_sect"
                android:textColor="#FFEB3B"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/day_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="end"
                android:text="@string/day"
                android:textColor="#FFEB3B"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hour_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/hour"
                android:textColor="#FFEB3B"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/semester_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:gravity="end"
                android:text="@string/sem_x"
                android:textColor="#FFEB3B"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/selectSubject_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/artifika"
        android:text="@string/select_subject"
        android:textColor="#FFEB3B"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_TableLayout"/>

    <Spinner
        android:id="@+id/subject_Spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:minHeight="48dp"
        android:backgroundTint="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/selectSubject_TextView"
        app:layout_constraintTop_toBottomOf="@id/details_TableLayout"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/students_ListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/confirmAttendance_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subject_Spinner">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/confirmAttendance_Button"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/confirm_attendance"
        style="@style/button_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="5dp"
        android:text="@string/choose_the_subject"
        android:fontFamily="@font/artifika"
        android:textSize="20sp"
        android:textColor="#FFEB3B"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>