<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF3700B3"
    tools:context=".AttendanceConfirmFragment" >

    <TableLayout
        android:id="@+id/details_TableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:stretchColumns="*"
        android:layout_marginBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/batchDeptSect_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/batch_dept_sect"
                android:layout_column="0"
                android:textColor="#FFC107"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/semester_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/sem_x"
                android:layout_column="1"
                android:textColor="#FFC107"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hour_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour"
                android:layout_column="0"
                android:textColor="@color/teal_200"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/date"
                android:layout_column="1"
                android:textColor="@color/teal_200"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/sub_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/subject"
                android:textColor="@color/teal_200"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/day_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/day"
                android:layout_column="1"
                android:textColor="@color/teal_200"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/presentees_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/artifika"
        android:gravity="center"
        android:textColor="#FFEB3B"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_TableLayout" />

    <TextView
        android:id="@+id/absentees_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/artifika"
        android:gravity="center"
        android:textColor="#FFEB3B"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/presentees_TextView" />

    <ListView
        android:id="@+id/absentees_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/absentees_TextView" />

    <TextView
        android:id="@+id/od_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/artifika"
        android:gravity="center"
        android:textColor="#FFEB3B"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@id/absentees_ListView" />

    <ListView
        android:id="@+id/od_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/saveAttendance_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/od_TextView"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/saveAttendance_Button"
        android:layout_width="match_parent"
        android:text="@string/save_attendance"
        android:fontFamily="@font/amaranth"
        style="@style/button_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>